# space

./: README.md  pyproject.toml
docs/: DESIGN.md  DEVELOP.md  PLAN.md  design-part1.md  design-part2.md
scripts/: inspect_archive.py  test_archive_dream.py
src/space/: config.py  main.py  models.py
src/space/agent/: __init__.py  archive.py  base.py  chat.py
src/space/channel/: __init__.py  base.py  stdio.py
src/space/core/: __init__.py  app.py  conversation.py  space.py
src/space/llm/: __init__.py  base.py  kksj.py  openrouter.py
src/space/skill/: __init__.py  loader.py
src/space/skill/skills/archive/: SKILL.md  context.md  record.md  space-md.md
src/space/store/: __init__.py  base.py  local.py
src/space/tool/: __init__.py  base.py  confirm.py  delete_file.py  finish_stage.py  list_files.py  read_file.py  run_agent.py  write_file.py
src/space/tui/: __init__.py  app.css  app.py  screens.py
src/space/tui/widgets/: __init__.py  input_area.py  message_area.py  status_bar.py
tests/: test_agent_system.py  test_archive_e2e.py  test_config.py  test_core_app.py  test_local_store.py  test_openrouter_provider.py  test_skill_loader.py  test_space_data.py  test_tools.py
